# AETHERIUM-LM

./: .gitignore  AGENTS.md  README.md  demo_cogitator_x.py  index.html  main.py  pyproject.toml  requirements.txt
app/: config.py  db.py  mobile_backend.py
app/services/: llm_service.py  platform_work.py
cogitator_x/agents/: evolution.py  orchestrator.py
cogitator_x/core/: bus.py  models.py
cogitator_x/reasoning/: mcts.py  prm.py
cogitator_x/utils/: prompts.py
docs/: mobile_backend_api.md
docs/architecture_reports/: data_flow_simulation.md  project_structure_report.txt
public/: audio-player.html  dashboard.html  flashcards.html  index.html  infographic.html  mind-map.html  slides.html  video-player.html
scripts/: simulate_duplicate_retry.py
tests/: test_llm_service.py  test_mobile_backend.py  test_platform_work.py  test_reasoning.py
