[project]
name = "aetherium-lm"
version = "0.1.0"
description = "Production-Grade LLM Systems"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.0.0",
    "langchain-community>=0.0.1",
    "langchain-core>=0.1.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0"
]

[tool.setuptools]
packages = ["app"]
